syntax="proto3";

package org.dousi.codec;

import "google/protobuf/any.proto";

option java_package = "org.dousi.codec.generated";
option java_outer_classname="DousiProtocol";

message Request {
    int64 requestId = 1;
    string interfaceName = 2;
    string methodName = 3;
    string sessionId = 4;
    repeated google.protobuf.Any args = 5;
};

message Response {
    int64 requestId = 1;
    DousiStatus status = 2;
    string sessionId = 3;
    oneof returnValue {
        google.protobuf.Any result = 4;
        string errorMessage = 5;
    };
};

enum DousiStatus {
    OK = 0; // OK;
    OUTER_ERROR = 1; // Outer error;
    INNER_ERROR = 2; // Inner error;
};
